--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "cheerio": "^0.17.0",
+    "express": "^4.10.0",
     "q": "^1.0.1",
     "request": "^2.46.0",
     "socket.io": "^1.1.0",
@@ -13,7 +14,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "author": "",
   "license": "ISC"
