--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cheerio": "^0.17.0",
     "express": "^4.10.0",
+    "lodash": "^2.4.1",
     "q": "^1.0.1",
     "request": "^2.46.0",
     "socket.io": "^1.1.0",
